# gitling

./: .bazelrc  .gitignore  BUILD  Gopkg.toml  Makefile  README.md  WORKSPACE  index.html  package.json
docsource/: BUILD.bazel  interface.go
docsource/gitrepo/: BUILD.bazel  docsource.go  docsource_test.go  file_commit_find.go  markdown_files.go  markdown_files_test.go
docsource/gitrepo/testdata/: .gitignore  BUILD.bazel  expand.go  repo_a.go  repo_a.tgz
frontend/: index.css  index.html  index.js  package-lock.json
server/: BUILD.bazel  server_example.go
server/testdata/: server.key  server.pem
