load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server_example.go"],
    importpath = "github.com/donaldguy/gitling/server",
    visibility = ["//visibility:private"],
    deps = [
        "//docsource/gitrepo:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    data = [":testdata/server.key", ":testdata/server.pem"],
    visibility = ["//visibility:public"],
)
