load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "docsource.go",
        "file_commit_find.go",
        "markdown_files.go",
    ],
    importpath = "github.com/donaldguy/gitling/docsource/gitrepo",
    visibility = ["//visibility:public"],
    deps = [
        "//docsource:go_default_library",
        "@in_gopkg_src_d_go_git_v4//:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/object:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/storer:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "docsource_test.go",
        "markdown_files_test.go",
    ],
    data = ["//docsource/gitrepo/testdata:repo_a.tgz"],
    embed = [":go_default_library"],
    deps = [
        "//docsource/gitrepo/testdata:go_default_library",
        "@com_github_deckarep_golang_set//:go_default_library",
        "@in_gopkg_src_d_go_git_v4//:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/filemode:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/object:go_default_library",
    ],
)
