load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "expand.go",
        "repo_a.go",
    ],
    importpath = "github.com/donaldguy/gitling/docsource/gitrepo/testdata",
    visibility = ["//docsource/gitrepo:__pkg__"],
    deps = ["@com_github_deckarep_golang_set//:go_default_library"],
)

exports_files(
    ["repo_a.tgz"],
    visibility = ["//docsource/gitrepo:__pkg__"],
)
